welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: identifier expected but integer literal found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                           ^Array1:4: error: ']' expected but ';' found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                        ^Array1:4: error: identifier expected but integer literal found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                            ^Array1:4: error: ']' expected but ';' found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                          ^Array1:4: error: identifier expected but integer literal found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                              ^Array1:4: error: ']' expected but ';' found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                             ^Array1:4: error: identifier expected but integer literal found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                                 ^Array1:4: error: ']' expected but ';' found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                                                  ^Array1:4: error: identifier expected but integer literal found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                                                      ^Array1:4: error: ']' expected but ';' found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                                                                      ^Array1:4: error: identifier expected but integer literal found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                                                                          ^Array1:4: error: ']' expected but '}' found.
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
                                                                                                                                        ^