welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array[Color](6) 
	for(i<-0 to 6) { t[1]=Color.red ; t[2]=Color.cyan ; t[3]=Color.green ; t[4]=Color.magenta ; t[5]=Color.orange ; t[6]=Color.pink }
	
}
